# boreal

./: AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  TODO.rst  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
boreal/: __init__.py  audio_widgets_notebook.ipynb  boreal.py  disco.00000.ground_truth.jams
boreal/audio_widgets/: __init__.py  audio.py  audio_processors.py  audio_widgets.py  description.html  main.py
docs/: Makefile  boreal.audio_widgets.rst  boreal.rst  conf.py  history.rst  index.rst  installation.rst  make.bat  modules.rst  usage.rst
tests/: __init__.py  test_boreal.py
