[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:boreal/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs


[options]
packages = find:
include_package_data = True
install_requires =
    bokeh>=2.4.2
    ipykernel>=6.9.1
    ipython>=8.5.0
    notebook>=6.4.8
    numpy>=1.21.5
    pyaudio>=0.2.12
    requests>=2.27.1
    scipy>=1.7.3
    setuptools>=61.2.0
    SoundFile>=0.10.3.post1

python_requires = >=3.7
