[bumpversion]
current_version = 0.8.4
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:boreal/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs


[options]
packages = find:
include_package_data = True
install_requires =
    bokeh>=2.3.3
    ipykernel>=5.3.4
    ipython>=7.9.0
    notebook>=5.3.0
    requests>=2.27.1
    setuptools>=61.2.0
    SoundFile>=0.10.3.post1

python_requires = >=3.7
